--- a/src/api/package.json
+++ b/src/api/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
