--- a/src/client/package.json
+++ b/src/client/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
